# my-test-task

./: .gitignore  main.py  pyproject.toml
src/: config.py  data_processing.py  database.py  models.py
